[metadata]
name = flake8_check_protocol_parrent
version = 0.1
description = flake8 plugin which checks protocol parent name
author = Anna
license = MIT
license_file = LICENSE

[options]
py_modules = flake8_check_protocol_parrent
install_requires =
    flake8>=3.7
    importlib-metadata>=0.9;python_version<"3.8"
python_requires = >=3.7

[options.entry_points]
flake8.extension =
    TRA=flake8_check_protocol_parrent:Plugin

[bdist_wheel]
universal = True
